rm name align center issue fixed

--- a/src/components/commonCss/style.scss
+++ b/src/components/commonCss/style.scss
@@ -6898,11 +6898,11 @@ left: 17rem;
 // <----END Remark popup css->
 .rm-table-body {
   .rm-part-name {
-    height: 61px;
+    height: 65px;
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
-    -webkit-box-align: center;
+    // -webkit-box-align: center;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     padding: 21px 4px 15px 15px !important;
